feat: created query instaed of search
